--- a/views/chat.pug
+++ b/views/chat.pug
@@ -3,12 +3,22 @@ html
   head
     meta(name="viewport",content="width=device-width, initial-scale=1")
     meta(charset="UTF-8")
+    link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/css/index.css', type='text/css' )
     style
       include ../public/chat.css
+
   body
+  div.heading More Real Talk
+  div.pattern
+  div#app
+    div#chat
+    div#viewers 1 👥 
+    input#input(type='text', autocorrect='off', autocomplete='off', autocapitalize='off', placeholder='Message' )
+    div.simple-keyboard
 
-  div#chat
-  input#input(type='text', autocomplete='off', autocapitalize='none', placeholder='Message' )
-
+  script(src='https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.js')
   script
     include ../public/chat.js
+  script
+    include ../public/keyboard.js
+
