nicer and all nicely working still

--- a/views/chat.pug
+++ b/views/chat.pug
@@ -8,13 +8,22 @@ html
       include ../public/chat.css
 
   body
-  div.heading More Real Talk
-  div.pattern
-  div#app
-    div#chat
-    div#viewers 1 👥 
-    input#input(type='text', autocorrect='off', autocomplete='off', autocapitalize='off', placeholder='Message' )
-    div.simple-keyboard
+    div.heading 
+      div MORE 
+      div REAL
+      div TALK
+
+    div.heading2
+      div LESS 
+      div FAKE
+      div THOUGHTS
+
+    div.pattern
+    div#app
+      div#chat
+      div#viewers 1 👥 
+      input#input(type='text', autocorrect='on', autocomplete='off', autocapitalize='off', placeholder='Message' )
+      div.simple-keyboard
 
   script(src='https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.js')
   script
