--- a/views/chat.pug
+++ b/views/chat.pug
@@ -3,6 +3,7 @@ html
   head
     meta(name="viewport",content="width=device-width, initial-scale=1")
     meta(charset="UTF-8")
+    meta(name="mobile-web-app-capable", content="yes")
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/css/index.css', type='text/css' )
     style
       include ../public/chat.css
@@ -10,12 +11,10 @@ html
   body
     div.heading 
       div MORE 
-      div REAL
       div TALK
 
     div.heading2
-      div LESS 
-      div FAKE
+      div MORE
       div THOUGHTS
 
     div.pattern
