--- a/views/chat.pug
+++ b/views/chat.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    meta(name="viewport",content="width=device-width, initial-scale=1")
+    meta(name="viewport",content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
     meta(charset="UTF-8")
     meta(name="mobile-web-app-capable", content="yes")
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/css/index.css', type='text/css' )
@@ -14,14 +14,14 @@ html
       div TALK
 
     div.heading2
-      div MORE
+      div REAL
       div THOUGHTS
 
     div.pattern
     div#app
       div#chat
       div#viewers 1 👥 
-      input#input(type='text', autocorrect='on', autocomplete='off', autocapitalize='off', placeholder='Message' )
+      input#input(type='search', autocorrect='on', autocomplete='off', autocapitalize='off', placeholder='Talk' )
       div.simple-keyboard
 
   script(src='https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.js')
