--- a/views/chat.pug
+++ b/views/chat.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    meta(name="viewport",content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
+    meta(name="viewport",content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, interactive-widget=resizes-content")
     meta(charset="UTF-8")
     meta(name="mobile-web-app-capable", content="yes")
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/css/index.css', type='text/css' )
@@ -9,13 +9,18 @@ html
       include ../public/chat.css
 
   body
-    div.heading 
-      div MORE 
-      div TALK
+    div.heading
+      div IMMERSIVE
+      div CHATS
 
     div.heading2
-      div REAL
+      div MORE
       div THOUGHTS
+
+    div.heading3
+      div REAL
+      div TALK
+
 
     div.pattern
     div#app
