--- a/views/chat.pug
+++ b/views/chat.pug
@@ -26,7 +26,7 @@ html
     div#app
       div#chat
       div#viewers 1 👥 
-      textarea#input(rows='1', spellcheck=false, autocorrect='on', autocomplete='off', autocapitalize='off', placeholder='Text' )
+      textarea#input(rows='1', spellcheck=false, autocorrect='off', autocomplete='off', autocapitalize='off', placeholder='Text' )
       div.simple-keyboard
 
   script(src='https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.js')
